perf: 차트 페이지 표시 정보 추가

--- a/front/src/styles/ChallengeStatus.css
+++ b/front/src/styles/ChallengeStatus.css
@@ -27,7 +27,7 @@
 
 .StatusLists {
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-start;
   align-items: center;
   gap: 24px;
   width: 800px;
